<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">VD: 0909123456...</string>
    <string name="name">Nhập tên</string>
    <string name="nameReceiver">Tên người nhận</string>
    <string name="email">VD: nguyenvanb@gmail.com</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="require">Bắt buộc</string>
    <string name="requireLengthPassword">Bắt buộc</string>
    <string name="stateCheckPhone">x: không hợp lệ, v: hợp lệ</string>
    <string name="search">Tìm kiếm</string>
    <string name="searchProduct">Tìm kiếm sản phẩm...</string>
    <string name="signIn">Đăng nhập</string>
    <string name="youDontHaveAccount">Bạn chưa có tài khoản?</string>
    <string name="signUp">Đăng ký</string>
    <string name="save">Lưu thay đổi</string>
    <string name="verify">Xác nhận</string>
    <string name="tryAgain">Thử lại</string>
    <string name="send">Gửi xác nhận</string>
    <string name="verifyEmailForAccount">Xác nhận email này cho tài khoản của bạn</string>
    <string name="updateEmail">Cập nhật</string>
    <string name="forgotPassword"><u>Quên mật khẩu?</u></string>
    <string name="home">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="cart">Giỏ hàng</string>
    <string name="profile">Cá nhân</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="imageCover">Ảnh đại diện sản phẩm</string>
    <string name="imageProduct">Ảnh sản phẩm</string>
    <string name="seeAll">Xem tất cả</string>
    <string name="newProduct">Sản phẩm mới</string>
    <string name="saleProduct">Sản phẩm đang giảm giá</string>
    <string name="hotCategory">Danh mục nổi bật</string>
    <string name="dress">Đầm, Váy</string>
    <string name="shirt">Áo</string>
    <string name="trouser">Quần</string>
    <string name="homeWear">Đồ bộ</string>
    <string name="coat">Áo khoác</string>
    <string name="sportsWear">Đồ thể thao</string>
    <string name="searchHistory">Lịch Sử Tìm Kiếm</string>
    <string name="delete">Xóa</string>
    <string name="deleteAll">Xóa tất cả</string>
    <string name="martAsRead">Đánh dấu đã đọc</string>
    <string name="martAsReadAll">Đánh dấu đã đọc tất cả</string>
    <string name="verifyEmail"> <u>Xác nhận email</u></string>
    <string name="titleEditProfile">Chỉnh sửa hồ sơ</string>
    <string name="titleManageOrder">Quản lý đơn hàng</string>
    <string name="desEditProfile">Chỉnh sửa thông tin cá nhân: tên, giới tính, ngày sinh, ảnh đại diện</string>
    <string name="desManageOrder">Quản lý các đơn hàng, theo dõi trạng thái đơn hàng</string>
    <string name="titleSignOut">Đăng xuất</string>
    <string name="desSignOut">Thoát tài khoản đăng nhập, bạn có thể đăng nhập tài khoản khác</string>
    <string name="notify">Thông báo</string>
    <string name="myCart">Giỏ hàng</string>
    <string name="review">Đánh giá</string>
    <string name="back">Trở về</string>
    <string name="Color">Màu sắc:</string>
    <string name="price">Giá: </string>
    <string name="Size">Kích cỡ:</string>
    <string name="infoProduct">Thông tin sản phẩm</string>
    <string name="desProduct">Mô tả sản phẩm</string>
    <string name="pattern">Kiểu dáng:</string>
    <string name="brand">Thương hiệu:</string>
    <string name="material">Chất liệu:</string>
    <string name="quantity">Số lượng</string>
    <string name="unit">đ</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Hủy</string>
    <string name="verifyInfo">Xác nhận thông tin nhận hàng</string>
    <string name="address">VD: Đ768, Thạnh Phú, Vĩnh Cửu, Đồng Nai</string>
    <string name="note">Ghi chú thêm(VD: Giao giờ hành chính)</string>
    <string name="paymentMode">Chọn hình thức thanh toán</string>
    <string name="cod">Thanh toán khi nhận hàng (COD)</string>
    <string name="momo">Ví MOMO</string>
    <string name="costDelivery">Phí vận chuyển:</string>
    <string name="totalPrice">Tổng giá:</string>
    <string name="totalPayment">Tổng thanh toán:</string>
    <string name="order">Đặt hàng </string>
    <string name="numberProduct">Số mặt hàng:</string>
    <string name="dateOrder">Ngày đặt:</string>
    <string name="addressText">Địa chỉ</string>
    <string name="birthYear">Năm sinh</string>
    <string name="detailOrder">Chi tiết đơn hàng</string>
    <string name="cancel">Hủy đơn hàng</string>
    <string name="textPurchased">Đã mua hàng</string>
    <string name="edited">Đã chỉnh sửa</string>
    <string name="comment">bình luận...</string>
    <string name="writeYourReview">Viết đánh giá của bạn...</string>
    <string name="reply">Trả lời</string>
    <string name="writeReview">Viết đánh giá</string>
    <string name="desReviewPurchasedProduct">Những sản phẩm đã mua nhưng chưa được đánh giá sẽ hiện ở đây</string>
    <string name="reviewPurchasedProduct">Đánh giá sản phẩm đã mua</string>
    <string name="myPurchasedProduct">Sản phẩm đã mua chưa đánh giá</string>
    <string name="notification">Thông báo của tôi</string>
    <string name="myOrder">Đơn hàng của tôi</string>
    <string name="infoPersonal">Thông tin cá nhân</string>
    <string name="sex">Giới tính</string>

    <string name="emptyCart">Bạn chưa có sản phẩm nào trong giỏ hàng</string>

</resources>