<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgSplash"
        tools:context=".ui.main.category.WomanCategoryFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/txt_shirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/shirt"
            android:textColor="@color/textDesColorGeneric"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_trouser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/trouser"
            android:textColor="@color/textDesColorGeneric"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_shirt" />

        <TextView
            android:id="@+id/txt_home_wear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/homeWear"
            android:textColor="@color/textDesColorGeneric"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_trouser" />

        <TextView
            android:id="@+id/txt_coat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/coat"
            android:textColor="@color/textDesColorGeneric"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_home_wear" />

        <TextView
            android:id="@+id/txt_sport_wear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/sportsWear"
            android:textColor="@color/textDesColorGeneric"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_coat" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_man_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>